--- a/src/Components/Header/Navbar/Navbar.module.scss
+++ b/src/Components/Header/Navbar/Navbar.module.scss
@@ -1,32 +1,21 @@
 @import '../../../styles/variables';
 
-.languageContainer {
-  width: 40px;
-  cursor: pointer;
-  height: 40px;
-  background-color: #fff;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  transition: border 0.3s;
-  border: 1px solid #fff;
-}
-
 
 .navBar {
-  @media (max-width: 600px) {
+  @media (max-width: 850px) {
     display: none;
   }
 
+
   ul {
+    @include text-body;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
 
     li {
+      @include text-body;
       position: relative;
       color: #fff;
       font-size: 20px;
@@ -35,11 +24,18 @@
       cursor: pointer;
 
       a {
-        font-family: 'Inter', sans-serif;
+        @include text-body;
+        color: #d7d7d7;
+
       }
 
       &:hover {
-        color: $color-light-purple;
+        a {
+          color: $color-primary;
+        }
+        .languageContainer {
+          border: 1px solid $color-primary;
+        }
       }
 
       &::before {
@@ -48,7 +44,7 @@
         left: 0;
         right: 100%;
         bottom: 0;
-        border-bottom: 2px solid $color-light-purple;
+        border-bottom: 1px solid $color-primary;
         transition: right 0.3s ease;
       }
 
@@ -57,4 +53,34 @@
       }
     }
   }
+}
+
+#changeLanguage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+
+}
+
+.languageContainer {
+  margin-top: 3px;
+  height: 20px;
+  cursor: pointer;
+  width: 20px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: border 0.3s;
+  border: 1px solid #fff;
+
+}
+
+.languageContainer img {
+  width: 100%;
+  height: 100%;
 }
