--- a/src/Components/Header/Navbar/NavBarMobile.module.scss
+++ b/src/Components/Header/Navbar/NavBarMobile.module.scss
@@ -1,5 +1,76 @@
 @import '../../../styles/variables';
 
+.menuModalClose {
+  z-index: 1;
+  cursor: pointer;
+  content: '';
+  display: block;
+  position: relative;
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: #242424;
+  border: 3px solid #47ffae2b;
+
+
+  &:hover {
+    border: 3px solid $color-primary;
+    background-color: #2e2e2e;
+  }
+
+  span {
+    transform: translate(-50%, -50%);
+    position: absolute;
+    background: #070b07;
+    width: 28px;
+    height: 3px;
+    border-radius: 27%;
+    background: $color-primary;
+
+    &:first-child {
+      top: 34%;
+      left: 50%;
+    }
+
+    &:nth-child(2) {
+      top: 50%;
+      left: 50%;
+    }
+
+    &:last-child {
+      top: 68%;
+      left: 50%;
+    }
+  }
+}
+
+.menuModalOpen {
+  z-index: 1;
+  content: '';
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  width: 55px;
+  height: 55px;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #242424;
+  border: 3px solid #47ffae2b;
+
+  svg {
+    width: 25px;
+    height: 25px;
+  }
+
+
+  &:hover {
+    border: 3px solid $color-primary;
+    background-color: #2e2e2e;
+  }
+
+
+}
+
 .containerModal {
   display: none;
 
@@ -35,11 +106,11 @@
 
   @media (max-width: 850px) {
     background-color: #242424;
-    top: 90px;
+    top: 82px;
     left: 0;
     right: 50%;
     width: 93vw;
-    z-index: 1;
+    z-index: 2;
     border-radius: 3px;
     margin: 0 auto;
     padding: 15px 40px;
