--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -4,9 +4,11 @@
 .header {
   background-color: $color-bg2;
   position: fixed;
+  z-index: 5;
   top: 20px;
   left: 0;
   right: 0;
+  margin: 0 auto;
   width: 100vw;
   max-width: 93%;
   border-radius: 3px;
@@ -19,7 +21,7 @@
   display: flex;
   justify-content: space-between;
   box-shadow: #606060 3px 3px 6px 0px inset,
-    #070b07 -3px -3px 6px 1px inset,
+    #0000001c -3px -3px 6px 1px inset,
     rgba(67, 166, 122, 0.02) 0px 3px 5px;
 
   @media(max-width: 600px) {
