--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap');
 
+#root {
+  position: relative;
+}
+
 * {
   color: #fff;
   font-family: 'Space Grotesk', sans-serif;
