--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,4 +4,18 @@
   height: 100vh;
   background-color: $color-bg1;
   padding: 103px 80px 0 80px;
+
+  @media (max-width: 900px) {
+    padding: 103px 80px 0 80px;
+  }
+
+  @media (max-width: 850px) {
+    padding: 103px 35px 0 35px;
+  }
+
+
+
+  @media (max-width: 500px) {
+    padding: 103px 20px 0 20px;
+  }
 }
