--- a/src/Components/Header/Navbar/Navbar.module.scss
+++ b/src/Components/Header/Navbar/Navbar.module.scss
@@ -8,6 +8,7 @@
 
 
   ul {
+    user-select: none;
     @include text-body;
     display: flex;
     align-items: center;
@@ -33,6 +34,7 @@
         a {
           color: $color-primary;
         }
+
         .languageContainer {
           border: 1px solid $color-primary;
         }
