--- a/src/Components/ParticlesContainer/particlesLoaded.module.scss
+++ b/src/Components/ParticlesContainer/particlesLoaded.module.scss
@@ -1,6 +1,7 @@
 .particlesContainer {
   position: absolute;
-  height: 100vh;
+  width: calc(100vw - 17px);
+  height: calc(100vh - 10px);
   transform: translateZ(0);
-
+  z-index: 0;
 }
