--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap');
+@import './variables';
 
 #root {
   position: relative;
 }
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: $color-bg2;
+}
+
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient($color-primary, $color-secondary);
+  border-radius: 10px;
+}
+
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-image: linear-gradient(#00e17d, #d1d1d1);
+}
+
+::-webkit-scrollbar-corner {
+  background-color: $color-bg2;
+}
+
 
 * {
   color: #fff;
