--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,7 @@
 @import './styles/variables';
 
 .mainContainer {
-  height: 100vh;
+  height: 3000px;
   background-color: $color-bg1;
   padding: 103px 80px 0 80px;
 
