--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -3,14 +3,21 @@
 .projectsContainer {
   margin-top: 200px;
   position: relative;
-  padding: 0px 20px;
+  padding: 10px 20px;
   z-index: 1;
+}
+
+.arrowSlider {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 .identificationContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 60px;
 
   @media(max-width: 1050px) {
     flex-direction: column;
@@ -29,9 +36,11 @@
     cursor: pointer;
     background-color: $color-primary;
 
-      @media(max-width: 1050px) {
-         display: none;
-        }
+    @media(max-width: 1050px) {
+      margin-top: 20px;
+      height: 40px;
+      width: 160px;
+    }
 
     &:hover {
       background-color: darken($color-primary, 10%);
@@ -43,7 +52,16 @@
 
 
 .titleProjectContainer {
-
   @include text-l;
-  font-size: 70px;
+  font-size: 57px;
+}
+
+
+.swiperSlide {
+  background-color: #000;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 500px !important;
+  height: 150px !important;
 }
