--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,10 @@
   position: relative;
 }
 
+html,
+body {
+  scroll-behavior: smooth;
+}
 
 ::-webkit-scrollbar {
   width: 10px;
@@ -181,4 +185,142 @@ table {
 img {
   max-width: 100%;
   display: block;
+}
+
+.swiper {
+  width: 100%;
+}
+
+
+.swiper-slide {
+  width: 60%;
+  height: 100%;
+
+  @media (max-width: 1100px) {
+    width: 80% !important;
+  }
+
+  @media (max-width: 600px) {
+    width: 90% !important;
+  }
+}
+
+
+.swiper-slide img {
+  border-radius: 2rem;
+  position: relative;
+  object-fit: cover;
+
+}
+
+
+.swiper-slide-shadow-left,
+.swiper-slide-shadow-right {
+  display: none;
+}
+
+.slider-controler {
+  gap: 250px;
+  margin-top: 80px;
+  padding: 5px 0;
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media(max-width: 550px) {
+    gap: 200px;
+  }
+}
+
+.slider-arrow {
+  position: static;
+  top: 0;
+  left: 0;
+
+  &:hover svg {
+    fill: $color-primary;
+  }
+}
+
+.slider-controler .swiper-button-prev {
+  left: 35% !important;
+
+  @media(max-width: 1280px) {
+    left: 32% !important;
+  }
+}
+
+.slider-controler .swiper-button-next {
+  left: 59.3% !important;
+
+  @media(max-width: 1280px) {
+    left: 62.3% !important;
+  }
+}
+
+
+
+.slider-controler .slider-arrow {
+  z-index: 2 !important;
+  background: $color-bg2;
+  width: 3.5rem;
+  height: 3.5rem;
+  border-radius: 50%;
+  top: 0;
+  filter: drop-shadow(0px 8px 24px rgba(18, 28, 53, 0.1));
+
+  @media(max-width: 550px) {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  @media(max-width: 380px) {
+    width: 2.7rem;
+    height: 2.7rem;
+  }
+
+  &:hover {
+    background: lighten($color-bg2, 10%)
+  }
+}
+
+.slider-controler .slider-arrow div {
+  font-size: 2rem;
+  color: #fff;
+  cursor: pointer;
+
+
+  &:hover {
+    color: $color-primary;
+  }
+}
+
+.slider-controler .slider-arrow::after {
+  content: '';
+}
+
+.swiper-pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: -34% !important;
+  gap: 1px;
+  z-index: 1 !important;
+  width: 100% !important;
+  bottom: 1rem;
+
+  @media(max-width: 550px) {
+    gap: 0;
+  }
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+  background-color: #6a6a6a;
+  opacity: 1 !important;
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+  background: $color-primary;
 }
