--- a/src/Components/Header/Navbar/Navbar.module.scss
+++ b/src/Components/Header/Navbar/Navbar.module.scss
@@ -24,10 +24,13 @@
       font-weight: 200;
       cursor: pointer;
 
-      a {
+      button {
+        font-size: 20px;
         @include text-body;
-        color: #d7d7d7;
-
+        color: #fff;
+        background: none;
+        border: none;
+        outline: none;
       }
 
       &:hover {
