--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -27,7 +27,7 @@
     border: none;
     @include text-body;
     position: relative;
-    color: #000;
+    color: #fff;
     padding: 0px 10px;
     border-radius: 1px;
     outline: none;
