--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -189,35 +189,40 @@ img {
 
 .swiper {
   width: 100%;
+  height: 100%;
 }
 
+.swiper-wrapper {
+  position: relative;
+  z-index: 1 !important;
+}
 
 .swiper-slide {
-  width: 60%;
+  width: 80%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   @media (max-width: 1100px) {
-    width: 80% !important;
+    width: 90% !important;
   }
 
   @media (max-width: 600px) {
-    width: 90% !important;
+    width: 100% !important;
   }
 }
 
 
 .swiper-slide img {
-  border-radius: 2rem;
-  position: relative;
+  border-radius: 30px;
+  display: block;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 
 }
 
-
-.swiper-slide-shadow-left,
-.swiper-slide-shadow-right {
-  display: none;
-}
 
 .slider-controler {
   gap: 250px;
