--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -1,10 +1,10 @@
 @import '../../styles/variables';
 
 .aboutContainer {
+  padding: 50px 80px 0 80px;
   position: relative;
   z-index: 1;
   display: flex;
-  padding-top: 50px;
   justify-content: space-between;
   align-items: center;
 
@@ -12,9 +12,18 @@
     flex-direction: column;
   }
 
-     @media (max-width: 524px) {
-      padding-top: 20px;
-     }
+  @media (max-width: 900px) {
+    padding: 60px 80px 0 80px;
+  }
+
+  @media (max-width: 850px) {
+    padding: 60px 35px 0 35px;
+  }
+
+  @media (max-width: 524px) {
+    padding: 20px 20px 0 20px;
+  }
+
 }
 
 .titleAboutContainer {
