--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -3,8 +3,20 @@
 .projectsContainer {
   margin-top: 200px;
   position: relative;
-  padding: 10px 20px;
+  padding: 60px 80px 0 80px;
   z-index: 1;
+
+  @media (max-width: 900px) {
+    padding: 60px 80px 0 80px;
+  }
+
+  @media (max-width: 850px) {
+    padding: 60px 35px 0 35px;
+  }
+
+  @media (max-width: 500px) {
+    padding: 60px 20px 0 20px;
+  }
 }
 
 .arrowSlider {
@@ -65,14 +77,22 @@
   height: 150px !important;
 }
 
-.swiperSlideCard:hover .projectsSlideLinks {
-  display: flex;
+.swiperSlideCard {
+
+  &:hover {
+    .projectsSlideLinks {
+      opacity: 0.9;
+      visibility: visible;
+      transition: opacity 0.5s ease, visibility 0.5s ease;
+
+    }
+  }
+
 }
 
 .projectsSlideLinks {
-
   &:hover {
-    opacity: 1;
+    opacity: 1 !important;
   }
 
   z-index: 6 !important;
@@ -81,10 +101,11 @@
   transform: translateX(-50%);
   width: 100vw;
   max-width: 93%;
-  display: none;
-  overflow: hidden;
+  display: flex;
+  visibility: hidden;
   align-items: center;
   justify-content: space-between;
+  transition: opacity 0.3s ease;
   padding: 0 100px;
   border-radius: 30px;
   color: white;
@@ -95,10 +116,13 @@
   #0000001c -3px -3px 6px 1px inset,
   rgba(67, 166, 122, 0.02) 0px 3px 5px;
   background-color: $color-bg2;
-  opacity: 0.9;
+  opacity: 0;
+
+
 
   @media (max-width:1050px) {
-    display: flex;
+    opacity: 1;
+    visibility: visible;
   }
 
   @media (max-width:900px) {
@@ -127,8 +151,6 @@
     padding: 0 20px;
     top: 63%;
   }
-
-
 
   a {
     @include text-body;
