--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $color-bg1: #151515;
 $color-bg2: #242424;
 $color-primary: #4ee1a0;
 $color-secondary: #d9d9d9;
+$color-error: #ff6f5b;
 
 @mixin text-xl {
   font-family: 'Space Grotesk', sans-serif;
