--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -9,15 +9,15 @@
   z-index: 1;
 
   @media (max-width: 900px) {
-    padding: 60px 80px 0 80px;
+    padding: 60px 80px 30px 80px;
   }
 
   @media (max-width: 850px) {
-    padding: 60px 35px 0 35px;
+    padding: 60px 35px 30px 35px;
   }
 
   @media (max-width: 500px) {
-    padding: 60px 20px 0 20px;
+    padding: 60px 20px 30px 20px;
   }
 }
 
