--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,8 +1,6 @@
 @import './styles/variables';
 
 .mainContainer {
-  height: 3000px;
   background-color: $color-bg1;
-  padding: 103px 0;
-
+  padding: 103px 0 0 0;
 }
