--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -11,10 +11,12 @@
   }
 
   @media (max-width: 850px) {
+    margin-top: 50px;
     padding: 60px 35px 0 35px;
   }
 
   @media (max-width: 500px) {
+    margin-top: 30px;
     padding: 60px 20px 0 20px;
   }
 }
