feat: language modal and i18n texts added

--- a/src/Components/Header/Navbar/NavBarMobile.module.scss
+++ b/src/Components/Header/Navbar/NavBarMobile.module.scss
@@ -76,6 +76,9 @@
 
   @media (max-width: 850px) {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
   }
 }
 
