--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -71,6 +71,10 @@
 .titleProjectContainer {
   @include text-l;
   font-size: 57px;
+
+  &:hover {
+    color: $color-primary;
+  }
 }
 
 .swiperSlide {
