feat: card projects and filters projects

--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -21,12 +21,6 @@
   }
 }
 
-.arrowSlider {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-}
-
 .identificationContainer {
   display: flex;
   justify-content: space-between;
@@ -53,7 +47,7 @@
     background-color: $color-primary;
 
     @media(max-width: 1050px) {
-      margin-top: 30px;
+      display: none;
     }
 
     &:hover {
@@ -65,7 +59,6 @@
   }
 }
 
-
 .titleProjectContainer {
   @include text-l;
   font-size: 57px;
@@ -75,112 +68,71 @@
   }
 }
 
-.swiperSlide {
-  background-color: #000;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
-  width: 500px !important;
-  height: 150px !important;
-}
 
-.swiperSlideCard {
-
-  &:hover {
-    .projectsSlideLinks {
-      opacity: 0.9;
-      visibility: visible;
-      transition: opacity 0.5s ease, visibility 0.5s ease;
-
-    }
-  }
-
-}
-
-.projectsSlideLinks {
-  &:hover {
-    opacity: 1 !important;
-  }
-
-  z-index: 6 !important;
-  top: 78%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100vw;
-  max-width: 93%;
+.listProjects {
   display: flex;
-  visibility: hidden;
-  align-items: center;
-  justify-content: space-between;
-  transition: opacity 0.3s ease;
-  padding: 0 100px;
-  border-radius: 30px;
-  color: white;
-  position: absolute;
-  height: 65px;
-  max-height: 100%;
-  box-shadow: #606060 3px 3px 6px 0px inset,
-  #0000001c -3px -3px 6px 1px inset,
-  rgba(67, 166, 122, 0.02) 0px 3px 5px;
-  background-color: $color-bg2;
-  opacity: 0;
+  gap: 48px;
+  align-items: start;
 
-
-
-  @media (max-width:1050px) {
-    opacity: 1;
-    visibility: visible;
+  @media(max-width:1050px) {
+    flex-direction: column;
   }
 
-  @media (max-width:900px) {
-    padding: 0 80px;
-  }
+  .leftContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 
-  @media (max-width:800px) {
-    padding: 0 70px;
-  }
-
-  @media (max-width:750px) {
-    top: 77%;
-    padding: 0 60px;
-    height: 58px;
-  }
-
-  @media (max-width: 700px) {
-    top: 72%;
-    padding: 0 40px;
-  }
-
-  @media (max-width: 650px) {
-    padding: 0 30px;
-  }
-
-  @media (max-width: 450px) {
-    padding: 0 20px;
-    top: 63%;
-  }
-
-  a {
-    @include text-body;
-    padding: 3px 5px;
-    letter-spacing: 2.29px;
-    font-weight: 500;
-    border-bottom: 2px solid $color-primary;
-
-    @media (max-width: 550px) {
-      font-size: 13px;
+    @media(max-width:1050px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
     }
 
-    &:hover {
-      color: $color-primary;
-    }
+    button {
+      width: 200px;
+      @include text-body;
+      cursor: pointer;
+      outline: none;
+      text-transform: capitalize;
+      padding: 5px;
+      border: none;
+      color: $color-secondary;
+      background-color: $color-bg2;
+      border-radius: 3px;
+      transition: color 0.3s ease;
 
-    @media (max-width:800px) {
-      color: $color-primary;
-    }
+      @media(max-width:650px) {
+        width: 150px;
+      }
 
-    max-width: max-content;
-    width: max-content;
-    cursor: pointer;
+      @media(max-width:350px) {
+        width: 120px;
+      }
+
+      &:hover {
+        background-color: lighten($color-bg2, 2%);
+        color: #fff;
+
+      }
+
+      &.active {
+        color: #fff;
+        font-weight: bold;
+        background-color: lighten($color-bg2, 2%);
+        border: 1px solid $color-primary;
+        padding: 6px 5px;
+      }
+    }
+  }
+
+  .rightContainer {
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+
   }
 }
