--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -111,8 +111,12 @@
   svg {
     color: $color-secondary;
     fill: $color-secondary;
-    width: 3rem;
-    height: 3rem;
+    width: 4.5rem;
+    height: 4.5rem;
+
+    path {
+      fill: $color-secondary;
+    }
   }
 }
 
@@ -213,10 +217,19 @@
     background-color: $color-primary;
 
     &:hover {
+      p {
+        font-weight: bold;
+      }
+
       transition: background-color 0.3s ease;
       background-color: darken($color-primary, 20%);
       color: white;
       border: 1px solid $color-primary;
+
+      svg {
+        width: 1.7rem;
+        height: 1.7rem;
+      }
     }
 
     p {
