--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -50,3 +50,18 @@
   }
 
 }
+
+.iconsIndividualProjectsHeader {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+
+  svg {
+    cursor: pointer;
+
+    &:hover {
+      color: $color-primary;
+      fill: $color-primary;
+    }
+  }
+}
