--- a/src/Components/Header/Navbar/Navbar.module.scss
+++ b/src/Components/Header/Navbar/Navbar.module.scss
@@ -2,6 +2,11 @@
 
 
 .navBar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+
   @media (max-width: 850px) {
     display: none;
   }
