--- a/src/Components/Projects/ProjectCardInProgress.module.scss
+++ b/src/Components/Projects/ProjectCardInProgress.module.scss
@@ -2,13 +2,14 @@
 
   .cardProject {
     height: 423px;
-    padding: 20px 16px 0 16px;
+    padding: 20px 16px;
     background-color: $color-bg2;
     border-radius: 5px;
     border: 1px solid lighten($color-bg2, 10%);
     transition: color 0.3s ease;
     width: 350px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
 
@@ -17,7 +18,7 @@
     }
 
     @media(max-width:700px) {
-      padding: 30px 16px 0 16px;
+      padding: 30px 16px 16px 16px;
       width: 260px;
       height: 400px;
     }
@@ -90,7 +91,6 @@
   }
 
   .cardProjectBoxTexts {
-    padding: 20px 5px;
     display: flex;
     flex-direction: column;
 
@@ -104,6 +104,7 @@
     }
 
     .descriptionBox {
+      padding-bottom: 35px;
       @include text-body;
       font-weight: 200;
       font-size: 13px;
@@ -115,25 +116,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 115px;
-
-    @media(max-width:1150px) {
-      margin-top: 80px;
-    }
-
-    @media(max-width:700px) {
-      margin-top: 50px;
-    }
-
-    @media(max-width:610px) {
-      margin-top: 128px;
-    }
-
-    @media(max-width:400px) {
-      margin-top: 97px;
-    }
-
-    @media(max-width:350px) {
-      margin-top: 50px;
-    }
   }
