--- a/src/Components/Projects/CardProject.module.scss
+++ b/src/Components/Projects/CardProject.module.scss
@@ -101,7 +101,8 @@
   }
 
   .cardProjectBoxTexts {
-    padding: 20px 5px 0;
+    flex-grow: 1;
+    padding: 20px 0 5px 0;
     display: flex;
     flex-direction: column;
 
@@ -111,7 +112,11 @@
     }
 
     .descriptionBox {
-      height: 121px;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 4;
+      overflow: hidden;
+      text-overflow: ellipsis;
       @include text-body;
       font-weight: 200;
       font-size: 13px;
@@ -119,13 +124,14 @@
     }
   }
 
+  .cardBottomWrapper {
+    margin-top: auto;
+  }
+
   .cardBottomBox {
-    margin-top: -7px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    @media(max-width:1150px) {
-      margin-top: 15px;
-    }
+
   }
