--- a/src/Components/Projects/IndividualProject.module.scss
+++ b/src/Components/Projects/IndividualProject.module.scss
@@ -174,8 +174,9 @@
     }
 
     @media(max-width: 380px) {
-      width: 140px;
-      padding: 15px 5px;
+      justify-content: center;
+      gap: 10px;
+      padding: 15px 10px;
     }
 
     @media(max-width: 330px) {
@@ -190,6 +191,7 @@
       p {
         font-weight: bold;
       }
+
       background-color: lighten($color-bg2, 5%);
 
       p {
