--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -77,6 +77,7 @@
 
   @media(max-width:1050px) {
     flex-direction: column;
+    align-items: center;
   }
 
   .leftContainer {
@@ -89,6 +90,10 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
+    }
+
+    @media(max-width:350px) {
+      gap: 15px;
     }
 
     button {
@@ -109,7 +114,7 @@
       }
 
       @media(max-width:350px) {
-        width: 120px;
+        width: 160px;
       }
 
       &:hover {
