--- a/src/Components/Projects/IndividualProject.module.scss
+++ b/src/Components/Projects/IndividualProject.module.scss
@@ -126,28 +126,22 @@
   align-items: center;
   flex-wrap: wrap;
 
-  @media(max-width: 450px) {
-    gap: 20px;
-  }
-
-  @media(max-width: 380px) {
-    gap: 10px;
-  }
 
   span {
     user-select: none;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 180px;
+
     @include text-body;
     text-align: center;
     background-color: $color-bg2;
     border-radius: 5px;
-    padding: 15px 5px;
+    padding: 15px 15px;
     border: 1px solid $color-primary;
     text-transform: capitalize;
     gap: 20px;
+    width: max-content;
 
     p {
       @include text-body;
