Responsiveness on large screens adjusted

--- a/src/Components/About/About.module.scss
+++ b/src/Components/About/About.module.scss
@@ -2,6 +2,8 @@
 
 .aboutContainer {
   padding: 30px 80px 0 80px;
+  max-width: 1700px;
+  width: 100%;
   position: relative;
   z-index: 1;
   display: flex;
