--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,4 +3,8 @@
 .mainContainer {
   background-color: $color-bg1;
   padding: 103px 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
