--- a/src/Components/Contact/Contact.module.scss
+++ b/src/Components/Contact/Contact.module.scss
@@ -2,50 +2,58 @@
 
 .contactContainer {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
   background-color: $color-bg2;
   margin-top: 100px;
   position: relative;
-  padding: 60px 80px 0px 80px;
   z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
+  .containerTexts {
+    justify-content: center;
+    max-width: 1700px;
+    padding: 60px 80px 0px 80px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+    @media (max-width: 1050px) {
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+
+      >svg {
+        display: block;
+      }
+    }
+
+    @media (max-width: 900px) {
+      padding: 60px 80px 30px 0px 80px;
+    }
+
+    @media (max-width: 850px) {
+      padding: 60px 35px 30px 0px 35px;
+    }
+
+    @media(max-width: 700px) {
+      margin-top: 50px;
+    }
+
+    @media (max-width: 500px) {
+      padding: 60px 20px 30px 0px 20px;
+    }
+  }
 
   >svg {
     display: none;
   }
 
-  @media (max-width: 1050px) {
-    >svg {
-      display: block;
-    }
-  }
-
-  @media (max-width: 900px) {
-    padding: 60px 80px 30px 0px 80px;
-  }
-
-  @media (max-width: 850px) {
-    padding: 60px 35px 30px 0px 35px;
-  }
-
-  @media (max-width: 500px) {
-    padding: 60px 20px 30px 0px 20px;
-  }
-}
-
-.contactContainer {
-  @media(max-width: 1050px) {
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-  }
-
   @media(max-width: 700px) {
     margin-top: 50px;
   }
+
 }
 
 .contactText {
@@ -92,7 +100,7 @@
 
 .formContact {
   align-items: end;
-  width: 70%;
+  width: 100%;
   max-width: 100%;
   display: flex;
   flex-direction: column;
