--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -1,6 +1,8 @@
 @import '../../styles/variables';
 
 .projectsContainer {
+  max-width: 1700px;
+  width: 100%;
   margin-top: 100px;
   position: relative;
   padding: 60px 80px 0 80px;
